--- a/agricolab/src/main/resources/application.properties
+++ b/agricolab/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 Database
-
+server.port=5000
 spring.datasource.url=jdbc:mysql://dbagricolab.c24itxmktyhc.us-east-1.rds.amazonaws.com:3306/dbAgricolab?useTimezone=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=agricolab
 spring.datasource.password=grupo18agricolab
